--- a/MAU/Dockerfile.frontend
+++ b/MAU/Dockerfile.frontend
@@ -3,11 +3,13 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
 ENV NODE_ENV=production
+# Copiar definiciones y lockfiles desde frontend/
 COPY frontend/package.json frontend/package-lock.json* frontend/yarn.lock* frontend/pnpm-lock.yaml* ./
 RUN if [ -f package-lock.json ]; then npm ci; \
     elif [ -f yarn.lock ]; then corepack enable && yarn install --frozen-lockfile; \
     elif [ -f pnpm-lock.yaml ]; then corepack enable && pnpm install --frozen-lockfile; \
     else npm install; fi
+# Copiar el código fuente real del frontend
 COPY frontend/ .
 RUN npm run build
 
