ci/infra: backend CAGPU como Next.js API; Traefik strip /cagpu; reactivar build

--- a/cagpu/Dockerfile.backend
+++ b/cagpu/Dockerfile.backend
@@ -1,34 +1,30 @@
 # syntax=docker/dockerfile:1
 
-FROM node:20-alpine AS base
+FROM node:20-alpine AS deps
 WORKDIR /app
-ENV NODE_ENV=production
-
-FROM base AS deps
-RUN corepack enable
-COPY package.json pnpm-lock.yaml* yarn.lock* package-lock.json* ./
-RUN if [ -f package-lock.json ]; then npm ci; \
-    elif [ -f yarn.lock ]; then yarn install --frozen-lockfile; \
-    elif [ -f pnpm-lock.yaml ]; then pnpm install --frozen-lockfile; \
+# Necesitamos devDependencies para construir Next
+COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./
+RUN if [ -f package-lock.json ]; then npm ci --include=dev; \
+    elif [ -f yarn.lock ]; then corepack enable && yarn install --frozen-lockfile; \
+    elif [ -f pnpm-lock.yaml ]; then corepack enable && pnpm install --frozen-lockfile; \
     else npm install; fi
 
-FROM base AS builder
-RUN corepack enable
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-RUN npx prisma generate || true
-# Si existe un script build:backend en package.json, ejecutarlo; si no, omitir compilación TS
-RUN node -e "const p=require('./package.json'); process.exit(p.scripts && p.scripts['build:backend']?0:1)" \
-  && npm run build:backend \
-  || echo "No build:backend script, skipping TS compile"
-
-FROM base AS runner
-USER node
+FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY --chown=node:node package.json ./
-COPY --chown=node:node prisma ./prisma
-# Copiar artefactos de build si existieran
-COPY --from=builder --chown=node:node /app/dist ./dist 2>/dev/null || true
+COPY . .
+# Generar Prisma Client si existe
+RUN npx prisma generate || true
+# Construir Next.js
+RUN npm run build
+
+FROM node:20-alpine AS runner
+WORKDIR /app
+ENV NODE_ENV=production
+ENV PORT=3000
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public 2>/dev/null || true
+COPY --from=builder /app/package.json ./package.json
+COPY --from=deps /app/node_modules ./node_modules
 EXPOSE 3000
-CMD sh -c "npx prisma migrate deploy && node dist/index.js"
+CMD ["sh", "-c", "npm run start -- -p ${PORT}"]
