--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,10 +24,10 @@ jobs:
             context: ./cagpu
             file: ./cagpu/Dockerfile.frontend
             tag: ghcr.io/jlrochin/cagpu-frontend:latest
-          # - name: cagpu-backend
-          #   context: ./cagpu
-          #   file: ./cagpu/Dockerfile.backend
-          #   tag: ghcr.io/jlrochin/cagpu-backend:latest
+          - name: cagpu-backend
+            context: ./cagpu
+            file: ./cagpu/Dockerfile.backend
+            tag: ghcr.io/jlrochin/cagpu-backend:latest
           - name: mau-frontend
             context: ./MAU
             file: ./MAU/Dockerfile.frontend
