--- a/cagpu/Dockerfile.backend
+++ b/cagpu/Dockerfile.backend
@@ -11,6 +11,10 @@ RUN if [ -f package-lock.json ]; then npm ci --include=dev; \
 
 FROM node:20-alpine AS builder
 WORKDIR /app
+# Variables SOLO para build
+ARG JWT_SECRET=build_dummy_secret
+ENV JWT_SECRET=${JWT_SECRET}
+ENV NEXT_TELEMETRY_DISABLED=1
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 # Generar Prisma Client si existe
