--- a/cagpu/Dockerfile.frontend
+++ b/cagpu/Dockerfile.frontend
@@ -13,6 +13,9 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+# Generar Prisma Client si existe
+RUN npx prisma generate || true
+# Construir Next.js
 RUN npm run build
 
 FROM node:20-alpine AS runner
