--- a/MAU/Dockerfile.backend
+++ b/MAU/Dockerfile.backend
@@ -12,6 +12,7 @@ RUN apt-get update \
 
 COPY requirements.txt .
 RUN pip install --upgrade pip \
+    && pip install setuptools requests \
     && pip install -r requirements.txt \
     && pip install gunicorn psycopg2-binary
 
