fix(api): actualizar rutas de API en CAGPU para incluir el prefijo '/cagpu' y ajustar configuraciones de Traefik en docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,19 @@ services:
     image: traefik:v3.1
     container_name: traefik
     command:
-      - --api.dashboard=true
-      - --api.insecure=true
+      - --api.dashboard=false
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
     ports:
       - "80:80"
-      - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
     networks:
       - frontend_net
+      - backend_net
 
   home:
     build:
