refactor(api): actualizar rutas de API y middleware para incluir el prefijo '/cagpu', mejorar la gestión de autenticación y permitir compatibilidad con Traefik

--- a/cagpu/config/tsconfig.json
+++ b/cagpu/config/tsconfig.json
@@ -39,6 +39,7 @@
     "isolatedModules": true,                   // Módulos aislados para bundlers
     "jsx": "preserve",                         // Preservar JSX para Next.js
     "incremental": true,                       // Compilación incremental
+    "types": ["jest", "node"],
     
     // ============================================================================
     // PLUGINS
