--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,8 @@ services:
       - "traefik.http.routers.cagpu-frontend.rule=PathPrefix(`/cagpu`) && !PathPrefix(`/cagpu/api`)"
       - "traefik.http.routers.cagpu-frontend.entrypoints=web"
       - "traefik.http.routers.cagpu-frontend.priority=10"
+      - "traefik.http.middlewares.cagpu-frontend-headers.headers.customresponseheaders.X-Service=cagpu-frontend"
+      - "traefik.http.routers.cagpu-frontend.middlewares=cagpu-frontend-headers"
       - "traefik.http.services.cagpu-frontend.loadbalancer.server.port=3000"
       - "com.centurylinklabs.watchtower.enable=true"
     networks:
@@ -104,7 +106,8 @@ services:
       - "traefik.http.routers.cagpu-backend.priority=20"
       - "traefik.http.services.cagpu-backend.loadbalancer.server.port=3000"
       - "traefik.http.middlewares.cagpu-api-strip.stripprefix.prefixes=/cagpu"
-      - "traefik.http.routers.cagpu-backend.middlewares=cagpu-api-strip"
+      - "traefik.http.middlewares.cagpu-backend-headers.headers.customresponseheaders.X-Service=cagpu-backend"
+      - "traefik.http.routers.cagpu-backend.middlewares=cagpu-api-strip,cagpu-backend-headers"
       - "com.centurylinklabs.watchtower.enable=true"
     networks:
       - frontend_net
