--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,7 @@ services:
     environment:
       NODE_ENV: production
       HOST: 0.0.0.0
+    command: sh -c "npx prisma migrate deploy && npm run start -- -H 0.0.0.0 -p 3000"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.cagpu-backend.rule=PathPrefix(`/cagpu/api`)"
